--- a/parts/fileview/filegroupsconfigwidgetbase.ui
+++ b/parts/fileview/filegroupsconfigwidgetbase.ui
@@ -76,6 +76,9 @@
                     <property name="allColumnsShowFocus">
                         <bool>true</bool>
                     </property>
+                    <property name="resizeMode">
+                        <enum>AllColumns</enum>
+                    </property>
                 </widget>
             </vbox>
         </widget>
