--- a/parts/autoproject/importexistingdlgbase.ui
+++ b/parts/autoproject/importexistingdlgbase.ui
@@ -9,7 +9,7 @@
             <x>0</x>
             <y>0</y>
             <width>600</width>
-            <height>450</height>
+            <height>550</height>
         </rect>
     </property>
     <property name="sizePolicy">
@@ -23,7 +23,7 @@
     <property name="minimumSize">
         <size>
             <width>600</width>
-            <height>450</height>
+            <height>550</height>
         </size>
     </property>
     <property name="caption">
@@ -39,65 +39,221 @@
         <property name="spacing">
             <number>6</number>
         </property>
-        <widget class="QLayoutWidget">
+        <widget class="QGroupBox">
             <property name="name">
-                <cstring>viewLayout</cstring>
+                <cstring>infoGroupBox</cstring>
+            </property>
+            <property name="maximumSize">
+                <size>
+                    <width>32767</width>
+                    <height>75</height>
+                </size>
+            </property>
+            <property name="title">
+                <string>Subproject information</string>
             </property>
             <hbox>
                 <property name="name">
                     <cstring>unnamed</cstring>
                 </property>
                 <property name="margin">
-                    <number>0</number>
+                    <number>11</number>
                 </property>
                 <property name="spacing">
                     <number>6</number>
                 </property>
-                <widget class="QGroupBox">
+                <widget class="QLayoutWidget">
                     <property name="name">
-                        <cstring>sourceGroupBox</cstring>
+                        <cstring>infoLabelLayout</cstring>
+                    </property>
+                    <grid>
+                        <property name="name">
+                            <cstring>unnamed</cstring>
+                        </property>
+                        <property name="margin">
+                            <number>0</number>
+                        </property>
+                        <property name="spacing">
+                            <number>6</number>
+                        </property>
+                        <widget class="QLabel" row="0" column="0" rowspan="1" colspan="2">
+                            <property name="name">
+                                <cstring>directoryStaticLabel</cstring>
+                            </property>
+                            <property name="text">
+                                <string>&lt;b&gt;Directory:&lt;/b&gt;</string>
+                            </property>
+                        </widget>
+                        <widget class="QLabel" row="1" column="0">
+                            <property name="name">
+                                <cstring>targetStaticLabel</cstring>
+                            </property>
+                            <property name="text">
+                                <string>&lt;b&gt;Target:&lt;/b&gt;</string>
+                            </property>
+                        </widget>
+                        <widget class="QLabel" row="1" column="1" rowspan="1" colspan="2">
+                            <property name="name">
+                                <cstring>targetLabel</cstring>
+                            </property>
+                            <property name="text">
+                                <string>[TARGET]</string>
+                            </property>
+                        </widget>
+                        <widget class="KSqueezedTextLabel" row="0" column="2">
+                            <property name="name">
+                                <cstring>directoryLabel</cstring>
+                            </property>
+                            <property name="text">
+                                <string>[DIRECTORY]</string>
+                            </property>
+                        </widget>
+                    </grid>
+                </widget>
+            </hbox>
+        </widget>
+        <widget class="QGroupBox">
+            <property name="name">
+                <cstring>introGroupBox</cstring>
+            </property>
+            <property name="sizePolicy">
+                <sizepolicy>
+                    <hsizetype>5</hsizetype>
+                    <vsizetype>7</vsizetype>
+                    <horstretch>0</horstretch>
+                    <verstretch>2</verstretch>
+                </sizepolicy>
+            </property>
+            <property name="minimumSize">
+                <size>
+                    <width>0</width>
+                    <height>0</height>
+                </size>
+            </property>
+            <property name="maximumSize">
+                <size>
+                    <width>32767</width>
+                    <height>55</height>
+                </size>
+            </property>
+            <property name="title">
+                <string></string>
+            </property>
+            <hbox>
+                <property name="name">
+                    <cstring>unnamed</cstring>
+                </property>
+                <property name="margin">
+                    <number>11</number>
+                </property>
+                <property name="spacing">
+                    <number>6</number>
+                </property>
+                <widget class="QLabel">
+                    <property name="name">
+                        <cstring>introLabel</cstring>
+                    </property>
+                    <property name="sizePolicy">
+                        <sizepolicy>
+                            <hsizetype>5</hsizetype>
+                            <vsizetype>7</vsizetype>
+                            <horstretch>0</horstretch>
+                            <verstretch>2</verstretch>
+                        </sizepolicy>
                     </property>
                     <property name="minimumSize">
                         <size>
-                            <width>330</width>
-                            <height>0</height>
+                            <width>0</width>
+                            <height>35</height>
                         </size>
                     </property>
-                    <property name="title">
-                        <string>Source directory</string>
+                    <property name="maximumSize">
+                        <size>
+                            <width>32767</width>
+                            <height>30</height>
+                        </size>
                     </property>
-                    <vbox>
-                        <property name="name">
-                            <cstring>unnamed</cstring>
-                        </property>
-                        <property name="margin">
-                            <number>11</number>
-                        </property>
-                        <property name="spacing">
-                            <number>6</number>
-                        </property>
-                    </vbox>
-                </widget>
-                <widget class="QGroupBox">
-                    <property name="name">
-                        <cstring>destGroupBox</cstring>
+                    <property name="text">
+                        <string>&lt;b&gt;[INTRODUCTION TEXT]&lt;/b&gt;</string>
                     </property>
-                    <property name="title">
-                        <string>[DESTINATION DIRECTORY]</string>
+                    <property name="alignment">
+                        <set>WordBreak|AlignCenter</set>
                     </property>
-                    <vbox>
-                        <property name="name">
-                            <cstring>unnamed</cstring>
-                        </property>
-                        <property name="margin">
-                            <number>11</number>
-                        </property>
-                        <property name="spacing">
-                            <number>6</number>
-                        </property>
-                    </vbox>
                 </widget>
             </hbox>
+        </widget>
+        <widget class="QSplitter">
+            <property name="name">
+                <cstring>viewSplitter</cstring>
+            </property>
+            <property name="minimumSize">
+                <size>
+                    <width>312</width>
+                    <height>350</height>
+                </size>
+            </property>
+            <property name="orientation">
+                <enum>Horizontal</enum>
+            </property>
+            <widget class="QGroupBox">
+                <property name="name">
+                    <cstring>sourceGroupBox</cstring>
+                </property>
+                <property name="minimumSize">
+                    <size>
+                        <width>0</width>
+                        <height>350</height>
+                    </size>
+                </property>
+                <property name="title">
+                    <string>Source directory</string>
+                </property>
+                <property name="toolTip" stdset="0">
+                    <string></string>
+                </property>
+                <vbox>
+                    <property name="name">
+                        <cstring>unnamed</cstring>
+                    </property>
+                    <property name="margin">
+                        <number>11</number>
+                    </property>
+                    <property name="spacing">
+                        <number>6</number>
+                    </property>
+                </vbox>
+            </widget>
+            <widget class="QGroupBox">
+                <property name="name">
+                    <cstring>destGroupBox</cstring>
+                </property>
+                <property name="minimumSize">
+                    <size>
+                        <width>0</width>
+                        <height>350</height>
+                    </size>
+                </property>
+                <property name="maximumSize">
+                    <size>
+                        <width>200</width>
+                        <height>32767</height>
+                    </size>
+                </property>
+                <property name="title">
+                    <string>[DESTINATION DIRECTORY]</string>
+                </property>
+                <vbox>
+                    <property name="name">
+                        <cstring>unnamed</cstring>
+                    </property>
+                    <property name="margin">
+                        <number>11</number>
+                    </property>
+                    <property name="spacing">
+                        <number>6</number>
+                    </property>
+                </vbox>
+            </widget>
         </widget>
         <widget class="QLayoutWidget">
             <property name="name">
